[package]
name = "EchoTag"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
indicatif = "0.18.6"
lofty = "0.24.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["json", "stream", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
